--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "server side for VidChat(video calling app)",
   "main": "index.ts",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
       "start": "nodemon index.ts"
   },
